<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">three-headed-monkey</string>
    <string name="settings_category_title_help">Help</string>
    <string name="settings_category_title_sim_settings">Sim Settings</string>
    <string name="serial_number">Serial Number</string>
    <string name="country_code">Country Code</string>
    <string name="operator">Operator</string>
    <string name="current_sim_card">Current SimCard</string>
    <string name="currently_authorized">Currently Authorized</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="authorize_card">Authorize SimCard</string>
    <string name="unauthorize_card">Unauthorize SimCard</string>
    <string name="authorized_cards">Authorized Cards</string>
    <string name="active_phonenumbers">Active Phonenumbers</string>
    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>
    <string name="settings_category_title_about">About</string>
    <string name="settings_preference_version_param">Version %1$s</string>
    <string name="settings_preference_dialer_number">Dialer Code</string>
    <string name="settings_preference_dialer_number_summery_param">You can start the app by using this number in the dialer:\n%1$s</string>
    <string name="launcher_label">3 headed monkey</string>
    <string name="settings_category_title_advanced_settings">Advanced Settings</string>
    <string name="setting_title_root_settings_backup">Root Settings Backup</string>
    <string name="sms_notification_text_preference_title">Sms Notification Text</string>
    <string name="sms_notification_default_text">Sorry, I can\'t come to the phone right now. I\'ll call you back later</string>

    <string name="title_activity_command_shell">Command Shell</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_supported_features">SupportedFeaturesActivity</string>
    <string name="title_activity_alarm_command_activiry">AlarmCommandActiviry</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="alarm">ALARM</string>
    <string name="choose_format">Choose format</string>
    <string name="external_storage_not_available">External storage is not available</string>

    <string-array name="location_history_export_choices">
        <item>csv</item>
        <item>gpx</item>
        <item>kml</item>
    </string-array>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="dialog_application_lock_login_password">Password</string>
    <string name="dialog_application_lock_login_error_wrong_password">Wrong Password!</string>
    <string name="dialog_application_lock_change_password_new_password">New Password</string>
    <string name="dialog_application_lock_change_password_new_password_repeat">New Password Repeat</string>
    <string name="dialog_application_lock_change_password_old_password">Old Password</string>
    <string name="dialog_application_lock_change_password_error_password_match">Passwords don\'t match!</string>
    <string name="dialog_application_lock_change_password_error_old_password">Old Password is wrong!</string>
    <string name="dialog_application_lock_change_password_title">Set Password</string>
    <string name="dialog_application_lock_change_password_information">Set an empty password to disable the application lock.</string>

    <!-- phone number settings -->
    phone_numbers_settings_add_dialog_label_name
    <string-array name="phone_number_settings_select_import_dialog">
        <item>Import from contacts</item>
        <item>Add new number</item>
    </string-array>
    <string name="phone_numbers_settings_add_dialog_label_name">Name</string>
    <string name="phone_numbers_settings_add_dialog_label_number">Number</string>
    <string name="phone_numbers_settings_add_dialog_error_message_not_all_values_set">Not all Values set</string>
    <string name="phone_numbers_settings_add_dialog_error_message_associated_name_already_exists">Name already exists</string>
    <string name="phone_numbers_settings_add_dialog_error_message_not_a_valid_phone_number">Not a valid phone number</string>
    <string name="phone_numbers_settings_add_dialog_title">New Phone Number</string>
    <string name="phone_numbers_settings_add_dialog_button_yes">Yes</string>
    <string name="phone_numbers_settings_add_dialog_button_no">No</string>
    <string name="phone_numbers_settings_add_dialog_import_select_title">Import from</string>

    <string name="title_activity_service_list">Remote Services</string>
    <string name="title_activity_service_add">ServiceAddActivity</string>
    <string name="scan_qrcode">Scan QR-Code</string>
    <string name="manually_edit_settings">Manually edit settings</string>
    <string name="base_url">Base Url</string>
    <string name="device_key">Device Key</string>
    <string name="scanner_needed_dialog_title">QR-Code Scanner Needed</string>
    <string name="scanner_needed_dialog_message">You need to have a QR-Code scanner installed. We recommend https://play.google.com/store/apps/details?id=com.google.zxing.client.android</string>
    <string name="check">Check</string>
    <string name="save">Save</string>
    <string name="base_url_port">Port</string>
    <string name="deleteServiceDialogTitle">Confirm deletion!</string>
    <string name="deleteServiceDialogMessage">Are you sure you want to delete this service?</string>
    <string name="title_activity_take_picture">TakePictureActivity</string>

</resources>
