<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35dp"
            android:text="@string/current_sim_card" />
    <TableLayout
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="150dp"
              android:layout_weight="1.0"
              >
        <TableRow style="@style/DetailsView.TableRow">
            <TextView android:text="@string/serial_number" />
            <TextView style="@style/DetailsView.Value" android:id="@+id/text_serial_number" android:text="@string/serial_number" />
        </TableRow>

        <TableRow style="@style/DetailsView.TableRow">
            <TextView android:text="@string/country_code" />
            <TextView style="@style/DetailsView.Value" android:id="@+id/text_country_code" android:text="@string/country_code" />
        </TableRow>

        <TableRow style="@style/DetailsView.TableRow">
            <TextView android:text="@string/operator" />
            <TextView style="@style/DetailsView.Value" android:id="@+id/text_operator" android:text="@string/operator" />
        </TableRow>

        <TableRow style="@style/DetailsView.TableRow">
            <TextView android:text="@string/currently_authorized" />
            <TextView style="@style/DetailsView.Value" android:id="@+id/text_currently_authorized" android:text="@string/currently_authorized" />
        </TableRow>
        <TableRow style="@style/DetailsView.TableRow">
            <View />
            <Button android:id="@+id/button_authorize_card"
                    android:text="@string/authorize_card"/>
        </TableRow>

    </TableLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/authorized_cards" />

    <ListView android:id="@+id/authorized_simcards_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

</LinearLayout>