<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:title="FUN">

    <EditText
        android:id="@+id/dialog_application_lock_change_password_new_password"
        android:inputType="textPassword"
        android:hint="@string/dialog_application_lock_change_password_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/dialog_application_lock_change_password_new_password_repeat"
        android:inputType="textPassword"
        android:hint="@string/dialog_application_lock_change_password_new_password_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/dialog_application_lock_change_password_old_password"
        android:hint="@string/dialog_application_lock_change_password_old_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/dialog_application_lock_change_password_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/dialog_application_lock_change_password_information"
        android:layout_gravity="center_horizontal" />
</LinearLayout>