<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_scan_qrcode"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_menu_camera"
            android:drawableStart="@drawable/ic_menu_camera"
            android:text="@string/scan_qrcode" />

        <Button
            android:id="@+id/btn_manually_edit_settings"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manually_edit_settings" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/details_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <!--<View style="@style/Divider" android:layout_margin="10dp" />-->

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow style="@style/DetailsView.TableRow">

                <TextView android:text="@string/base_url" />

                <EditText
                    android:id="@+id/edit_base_url"
                    style="@style/DetailsView.Edit"
                    android:layout_width="fill_parent"
                    android:hint="@string/base_url"
                    android:inputType="textUri" />
            </TableRow>

            <TableRow style="@style/DetailsView.TableRow">

                <TextView android:text="@string/base_url_port" />

                <EditText
                    android:id="@+id/edit_base_url_port"
                    style="@style/DetailsView.Edit"
                    android:layout_width="fill_parent"
                    android:hint="@string/base_url_port"
                    android:inputType="number" />
            </TableRow>

            <TableRow style="@style/DetailsView.TableRow">

                <TextView android:text="@string/device_key" />

                <EditText
                    android:id="@+id/edit_device_key"
                    style="@style/DetailsView.Edit"
                    android:hint="@string/device_key" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progress_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="visible" />

            <TextView
                android:id="@+id/text_status_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="status message"
                android:textSize="18sp"
                android:visibility="visible" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_check_or_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/check" />

    </LinearLayout>

</LinearLayout>
